# mosaic-v1

./: .gitignore  README.md  README.org  architecture.mmd  pyproject.toml
msc-100-pdf/: app.py  chatbot.py  create_menu.py  extract.py
msc-101-csv/: .env  00-instructions.txt  app.py  chatbot.py  menu.csv  menu.py  play.py
msc-102-json/: 00-instructions.txt  app.py  chatbot.py  menu.py  offers.json
msc-103-api/: 00-instructions.txt  api.py  app.py  chatbot.py
scratch/msc-100-pdf/: 00-instructions.txt  app.py  chatbot.py  create_menu.py  extract.py  requirements.txt
scratch/msc-101-csv/: app.py  chatbot.py  menu.py
scratch/msc-102-json/: app.py  menu.py
scratch/msc-103-api/: api.py  app.py  chatbot.py
src/mosaic_v1/: __init__.py  database.py  llm.py  models.py  pizzeria.py  pizzeria_api.py  pizzeria_assistant.py  seeds.py  utils.py
src/mosaic_v1/templates/: ai_pizza_ordering_page.jinja2  human_pizza_ordering_page.jinja2  layout.jinja2
