[project]
name = "mosaic-v1"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "chiefkemist", email = "chiefkemist+git@gmail.com" }
]
dependencies = [
    "flask>=3.0.3",
    "pymupdf>=1.24.7",
    "fpdf2>=2.7.9",
    "fastapi[all]>=0.111.0",
    "jinja2>=3.1.4",
    "httpx>=0.27.0",
    "sqlmodel>=0.0.19",
    "rich>=13.7.1",
    "instruct-easy @ git+https://github.com/chiefkemist/instruct-easy",
    "uvicorn>=0.30.1",
]
#readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.1",
]

[tool.rye.scripts]
pizzeria__dev = "uvicorn mosaic_v1.pizzeria:app --reload"
pizzeria_assistant__dev = "uvicorn mosaic_v1.pizzeria_assistant_:app --reload"
pizzeria_api__dev = "uvicorn mosaic_v1.pizzeria_api_:app --reload"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mosaic_v1"]
